--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kuan</title>
+  <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag "/javascripts/mootools-core.js" %>
+  <%= javascript_include_tag "/javascripts/rails.js" %>
   <%= csrf_meta_tag %>
+  <%= yield(:head) %>
 </head>
 <body>
-
-<%= yield %>
-
+  <div id="container">
+    <% flash.each do |name, msg| %>
+      <%= content_tag :div, msg, :id => "flash_#{name}" %>
+    <% end %>
+    <%= content_tag :h1, yield(:title) if show_title? %>
+    <%= yield %>
+  </div>
 </body>
 </html>
