--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
+  <title><%= content_for?(:title) ? yield(:title) : "-" %></title>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag "/javascripts/mootools-core.js" %>
-  <%= javascript_include_tag "/javascripts/rails.js" %>
+  <%= javascript_include_tag "mootools-core", "rails" %>
   <%= csrf_meta_tag %>
   <%= yield(:head) %>
 </head>
