--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
       = content_for?(:title) ? yield(:title) : "-"
     = stylesheet_link_tag :all
     - js 'rails', 'mootools-core'
-    - @js.uniq!.reverse!.each do |f|
+    - @js.uniq.reverse!.each do |f|
       = javascript_include_tag f
     = csrf_meta_tag
     = yield :head
