finish form edit

--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -1,4 +1,4 @@
-= form_tag("/posts", :method => :post, :remote => true)
+= form_t(params)
 = hidden_field_tag "_type", @post._type
 = render partial: sub_template, object: @post,
   as: :post
