--- a/app/views/posts/_form_link.html.haml
+++ b/app/views/posts/_form_link.html.haml
@@ -1,9 +1,9 @@
 %span
   = label_tag 'url'
   = text_field_tag 'url', post.url
-
+%span
   = label_tag 'title'
   = text_field_tag 'title', post.title
-
+%span
   = label_tag 'content'
   = text_field_tag 'content', post.content
