user system stage2: signup

--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,2 +1,23 @@
-%h1 Users#new
-%p Find me in app/views/users/new.html.haml
+%h1 注册
+
+= form_for(@user) do |f|
+  = render 'error_messages'
+  %div
+    = f.label :email
+    %br/
+    = f.text_field :email
+  %div
+    = f.label :name
+    %br/
+    = f.text_field :name
+  %div
+    = f.label :password
+    %br/
+    = f.password_field :password
+  %div
+    = f.label :password_confirmation
+    %br/
+    = f.password_field :password_confirmation
+  %div
+    = f.submit "提交"
+= debug params
