--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -2,5 +2,6 @@
   = render partial: sub_template, object: post
   = post.created_at
   = link_to "编辑", edit_post_path(post)
-  = link_to "删除", "/posts/#{post.id}", :confirm => "确定删除?", :method => :delete, :remote => true
+  = link_to "删除", "/posts/#{post.id}", :confirm => "确定删除?", 
+    :method => :delete, :remote => true
 
