--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -2,22 +2,20 @@
 
 = form_for(@user) do |f|
   = render 'error_messages'
-  %div
+  .field
     = f.label :email
-    %br/
+    %br
     = f.text_field :email
-  %div
+  .field
     = f.label :name
-    %br/
+    %br
     = f.text_field :name
-  %div
+  .field
     = f.label :password
-    %br/
+    %br
     = f.password_field :password
-  %div
+  .field
     = f.label :password_confirmation
-    %br/
+    %br
     = f.password_field :password_confirmation
-  %div
-    = f.submit "提交"
-= debug params
+  .action= f.submit "提交"
