--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,4 +1,3 @@
 %h1 Home
-%div
-  - flash.each do |k, v|
-    %div{:class => "flash_#{k}"}= v
+- flash.each do |k, v|
+  %div{:class => "flash_users_#{k}"}= v
