--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -1,5 +1,5 @@
-= form_t(params)
-= hidden_field_tag "_type", @post._type
-= render partial: sub_template, object: @post,
-  as: :post
-= submit_tag
+= form_t params, do
+  = hidden_field_tag "_type", @post._type
+  = render partial: sub_template, object: @post,
+    as: :post
+  = submit_tag
