Use content_for to handle different type of form

--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -1,5 +1,7 @@
+= render partial: sub_template, object: @post,
+  as: :post
+
 = form_t params, do
   = hidden_field_tag "_type", @post._type
-  = render partial: sub_template, object: @post,
-    as: :post
+  = content_for :form
   = submit_tag
