--- a/app/views/posts/_form_blog.html.haml
+++ b/app/views/posts/_form_blog.html.haml
@@ -1,6 +1,7 @@
-%span
-  = label_tag 'title'
-  = text_field_tag 'title', post.title
-%span
-  = label_tag 'content'
-  = text_area_tag 'content', post.content
+- content_for :form do
+  %span
+    = label_tag 'title'
+    = text_field_tag 'title', post.title
+  %span
+    = label_tag 'content'
+    = text_area_tag 'content', post.content
