--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,3 +1,5 @@
 %h1 Home
 - flash.each do |k, v| 
   %div{:class => "flash_users_#{k}"}= v
+.edit_user
+  = link_to "修改账户信息", edit_user_path(current_user)
