--- a/app/views/posts/_form_pics.html.haml
+++ b/app/views/posts/_form_pics.html.haml
@@ -1,19 +1,20 @@
-%span
-  %input{ :type => 'file', :id => 'image_uploader', :name => 'file' }
-  %input{ :id => 'photo_template', :value => render_form_photo(nil), :type => 'hidden' }
-%ul
-  - post.photos.each do |p|
-    = render_form_photo p
-#image_status
-%span
-  = label_tag 'content'
-  = text_area_tag 'content', post.content
+- content_for :form do
+  %span
+    %input{ :type => 'file', :id => 'image_uploader', :name => 'file' }
+    %input{ :id => 'photo_template', :value => render_form_photo(nil), :type => 'hidden' }
+  %ul{ :id => 'pics_ul' }
+    - post.photos.each do |p|
+      = render_form_photo p
+  #image_status
+  %span
+    = label_tag 'content'
+    = text_area_tag 'content', post.content
   
-:javascript
-  document.addEvent('domready', function(){
-    var photo_template = $('photo_template');
-    K.remote_file('image_uploader', '/images', function(v){
-      var val = photo_template.value.replace('{_image_}', v.o).replace('{_desc_}', '').replace('{_id_}', v.id);
-      new Element('div', {'html':val}).inject(document.body);
+  :javascript
+    document.addEvent('domready', function(){
+      var photo_template = $('photo_template');
+      K.remote_file('image_uploader', '/images', function(v){
+        var val = photo_template.value.replace('{_image_}', v.o).replace('{_desc_}', '').replace('{_id_}', v.id);
+        new Element('div', {'html':val}).inject($('pics_ul'));
+      });
     });
-  });
