--- a/app/views/posts/_form_text.html.haml
+++ b/app/views/posts/_form_text.html.haml
@@ -1,7 +1,14 @@
+- content_for :title, "发布文字_宽瞳"
+- content_for :form_title, "发布文字"
+
 - content_for :form do
-  %span
-    = label_tag 'title'
-    = text_field_tag 'title', post.title
-  %span
-    = label_tag 'content'
+  .option_text
+    %a.new_title_starter.slight{href: "#"}
+      +新建标题
+    %a.rich_editor_starter.slight{href: "#"}
+      启用富文本编辑器
+  .title_text
+    = label_tag :title, "标题(可选)"
+    = text_field_tag :title, post.title
+  .text
     = text_area_tag 'content', post.content
