--- a/app/views/posts/_form_pics.html.haml
+++ b/app/views/posts/_form_pics.html.haml
@@ -1,3 +1,6 @@
+- @post_type = capture do
+  图片
+
 - content_for :form do
   %span
     %input{ :type => 'file', :id => 'image_uploader', :name => 'file' }
