Styled form for link and text

--- a/app/views/layouts/posts.html.haml
+++ b/app/views/layouts/posts.html.haml
@@ -9,4 +9,9 @@
 
   - content_for :title, (@action + @post_type + "_宽瞳")
 
+- content_for :head, do
+  = stylesheet_link_tag "post_edit"
+
+- content_for :site_layout, "site_middle_size"
+
 = render :file => 'layouts/application'
