--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,6 @@
     = csrf_meta_tag
     = yield :head if content_for?(:head)
   %body
-    #container
+    #container{class: content_for?(:site_layout) ? yield(:site_layout) : "site"}
       = content_for?(:content) ? yield(:content) : yield
     = debug params if Rails.env.development? 
