More style on post form

--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -11,5 +11,6 @@
       .my_pages
         .selector STUBBED
     .cancel
-    %button{class: "send", type: "submit", value: "Commit"}
-      SUBMIT
+    .send
+      %button{type: "submit", value: "Commit"}
+        SUBMIT
