One more style fix, meh

--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -228,7 +228,7 @@ a.logo
 
   .selector
     display: block
-    @include size($selector-inner - 2 * $selector-padding, 34px)
+    @include size(148px, 34px)
     cursor: pointer
     line-height: 34px
     font:
