--- a/app/views/posts/_form_photo.html.haml
+++ b/app/views/posts/_form_photo.html.haml
@@ -1,8 +1,8 @@
 %li
-  %a{ :href => (form_photo.nil? ? "{_image_a_}" : form_photo.image.url_for(:original)), :rel => 'lightbox' }
-    %img{ :src => (form_photo.nil? ? "{_image_}" : form_photo.image.url_for(:small)), :alt => '', :style => 'width:30px;height:30px' }
+  %a{ :href => (form_photo.nil? ? "{image_a}" : form_photo.image.url_for(:original)), :rel => 'lightbox' }
+    %img{ :src => (form_photo.nil? ? "{image}" : form_photo.image.url_for(:small)), :alt => '', :style => 'width:30px;height:30px' }
   %span
-    = text_field_tag "photos[][desc]", form_photo.nil? ? "{_desc_}" : form_photo.desc
-    = hidden_field_tag "photos[][image]", (form_photo.nil? ? "{_id_}" : form_photo.image.id)
+    = text_field_tag "photos[][desc]", form_photo.nil? ? "{desc}" : form_photo.desc
+    = hidden_field_tag "photos[][image]", (form_photo.nil? ? "{id}" : form_photo.image.id)
     - if not form_photo.nil?
       = hidden_field_tag "photos[][id]", form_photo.id
