--- a/app/views/posts/_form_pics.html.haml
+++ b/app/views/posts/_form_pics.html.haml
@@ -17,10 +17,12 @@
     document.addEvent('domready', function(){
       var photo_template = $('photo_template');
       K.remote_file('image_uploader', '/upload/photo', function(v){
-        var val = photo_template.value.replace('{_image_a_}', v.original)
-          .replace('{_image_}', v.small)
-          .replace('{_desc_}', '')
-          .replace('{_id_}', v.id);
+        var val = photo_template.value.substitute({
+         'image_a': v.original,
+         'image': v.small,
+         'desc': '',
+         'id': v.id
+        });
         new Element('div', {'html':val}).inject($('pics_ul'));
       });
     });
