Extract lib.sass and base.sass

--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -1,108 +1,4 @@
-$blue = #336DFF
-$light-blue = #7eaedc
-$pink = #cadbea
-$almost-white = #f2f6f9
-$green = #68879F
-$light-gray = #8e9494
-$gray = #777
-
-$font-main = "Hiragino Sans GB", hei, "microsoft yahei"
-
-$logo-width = 210px
-
-$input-font-size: 20px
-$input-height: 40px
-
-@mixin centered_container($width)
-  width: $width
-  margin: auto
-  overflow: hidden
-
-@mixin size($width, $height)
-  width: $width
-  height: $height
-
-@mixin hide_text
-  text-indent: -9999px
-
-@mixin big_button
-  @include size(150px, 44px)
-  cursor: pointer
-
-@mixin clear_fix
-  *zoom: 1
-  &:after
-    content: ' '
-    display: block
-    height: 0
-    clear: both
-    visibility: hidden
-
-@mixin border-radius($radius)
-  -moz-border-radius: $radius
-  -webkit-border-radius: $radius
-  border-radius: $radius
-
-@mixin heading
-  font-weight: normal
-  font-size: 30px
-
-body
-  margin: 0
-  font:
-    size: 12px
-    family: $font-main
-
-a
-  text-decoration: none
-  color: $blue
-  &:hover
-    text-decoration: underline
-
-  &.slight
-    color: $light-blue
-
-  &.page_name
-    color: #f93
-    font-weight: bold
-    line-height: 150%
-
-img
-  border: 0
-
-input,
-textarea
-  outline: none
-
-label
-  font-family: $font-main
-
-.header
-  margin-top: 5px
-  height: 50px
-
-.navigator
-  margin-left: $logo-width
-  text-align: right
-
-.dash_navigator
-  @extend .navigator
-  font-size: 14px
-
-a.logo
-  display: inline
-  border: 0
-  @include size($logo-width, 46px)
-  background: url('/images/logo.gif')
-  float: left
-
-.site
-  @include centered_container(900px)
-
-.site_middle_size
-  @include centered_container(750px)
-
-// Post specific
+@import 'base'
 
 .post
   margin: 20px auto 0 auto
