--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,3 +3,4 @@
   %div{:class => "flash_users_#{k}"}= v
 .edit_user
   = link_to "修改账户信息", edit_user_path(current_user)
+= render 'shared/current_user_blogs'
