--- a/doc/raw_html/k201102.css
+++ b/doc/raw_html/k201102.css
@@ -684,11 +684,10 @@ form.edit_page .submit_box input{
 
 /****page_control***/
 .page_control {
-	margin-left:433px;
-	*margin-left:416px;
+	margin-left:413px;
 }
 
-.page_control a{
+.page_control a, .page_control .page_number{
 	display:block;
 	float:left;
 	text-decoration:none;
@@ -702,9 +701,16 @@ form.edit_page .submit_box input{
 	color:white;
 	font-size:14px;
 	text-align:center;
-	margin-left:20px;
 }
-
+.page_control .page_number{
+	width:60px;
+	font-size:22px;
+	line-height:26px;
+	font-weight:bold;
+	text-align:center;
+	font-family:Helvetica,Arial,sans-serif;
+	color:#666;
+}
 
 /****my_pages****/
 .my_pages a{
