Image cropped to center

--- a/app/views/posts/_pics_single.html.haml
+++ b/app/views/posts/_pics_single.html.haml
@@ -1,4 +1,4 @@
 - photo = pics_single.photos[0]
-= image_tag photo.image.url_for(:original)
+= image_tag photo.image.url_for(:large)
 %br
 = pics_single.content
