--- a/app/views/posts/_form_photo.html.haml
+++ b/app/views/posts/_form_photo.html.haml
@@ -1,8 +1,16 @@
-%li
-  %a{ :href => (form_photo.nil? ? "{image_a}" : form_photo.image.url_for(:original)), :rel => 'lightbox' }
-    %img{ :src => (form_photo.nil? ? "{image}" : form_photo.image.url_for(:small)), :alt => '', :style => 'width:30px;height:30px' }
-  %span
-    = text_field_tag "photos[][desc]", form_photo.nil? ? "{desc}" : form_photo.desc
-    = hidden_field_tag "photos[][image]", (form_photo.nil? ? "{id}" : form_photo.image.id)
-    - if not form_photo.nil?
-      = hidden_field_tag "photos[][id]", form_photo.id
+%li{ :id => (form_photo.nil? ? "" : "photo_#{form_photo.id}"), :name => 'photo_item' }
+  = hidden_field_tag "photos[][image]", (form_photo.nil? ? "" : form_photo.image.id), :class => "image_id"
+  - unless form_photo.nil?
+    = hidden_field_tag "photos[][id]", form_photo.id
+
+  %a{ :name => "tar_drag", :alt => "上下拖动调整顺序", :href => "#" }
+    +
+  %a{ :name => "tar_img_a", :href => (form_photo.nil? ? "#" : form_photo.image.url_for(:original)), :rel => 'lightbox' }
+    %img{ :name => "tar_img", :src => (form_photo.nil? ? "" : form_photo.image.url_for(:small)), :alt => '', :style => 'width:30px;height:30px' }
+  %span{ :name => "tar_desc" }
+    = text_field_tag "photos[][desc]", form_photo.nil? ? "" : form_photo.desc
+  - if form_photo.nil?
+    %span{ :name => "tar_process" }
+      上传中...
+  %a{ :name => "tar_close", :alt => "删除", :href => "#" }
+    删除
