--- a/app/views/posts/_form_pics.html.haml
+++ b/app/views/posts/_form_pics.html.haml
@@ -5,10 +5,9 @@
   %span
     %input{ :type => 'file', :id => 'image_uploader', :name => 'file', :autocomplete => 'off' }
     %input{ :id => 'photo_template', :value => render_form_photo(nil), :type => 'hidden' }
-  %ul{ :id => 'pics_ul' }
+  %ul{ :id => 'photos_list' }
     - post.photos.each do |p|
       = render_form_photo p
-  #image_status
   %span
     = label_tag 'content'
     = text_area_tag 'content', post.content
