--- a/app/views/posts/_form_pics.html.haml
+++ b/app/views/posts/_form_pics.html.haml
@@ -4,7 +4,9 @@
 - content_for :form do
   %span
     %input{ :type => 'file', :id => 'image_uploader', :name => 'file', :autocomplete => 'off' }
-    %input{ :id => 'photo_template', :value => render_form_photo(nil), :type => 'hidden' }
+    %input{ :type => 'text', :id => 'url_uploader_url', :alt => 'http://' }
+    %input{ :type => 'button', :id => 'url_uploader_btn', :value => '提交链接' }
+  %input{ :id => 'photo_template', :value => render_form_photo(nil), :type => 'hidden' }
   %ul{ :id => 'photos_list' }
     - post.photos.each do |p|
       = render_form_photo p
