--- a/app/views/posts/_form_pics.html.haml
+++ b/app/views/posts/_form_pics.html.haml
@@ -10,7 +10,17 @@
   %ul{ :id => 'photos_list' }
     - post.photos.each do |p|
       = render_form_photo p
-  %span
+  %div
+    %span
+      %a{ :id => 'tar_tog_url', :href => '#' }
+        提交一个图片网址
+      %a{ :id => 'tar_tog_local', :href => '#', :style => 'display:none' }
+        提交本地图片
+    %span
+      %a{ :id => 'tar_url', :href => '#' }
+        +添加描述
+    
+  %span{ :style => 'display:none' }
     = label_tag 'content'
     = text_area_tag 'content', post.content
   
