--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -25,10 +25,14 @@
     padding-bottom: 25px
 
   .rich_editor_starter,
+  .textarea_starter,
+  .textarea_closer,
   .new_title_starter
     width: 100px
 
-  .rich_editor_starter
+  .rich_editor_starter,
+  .textarea_starter,
+  .textarea_closer
     float: right
 
   .new_title_starter
