--- a/app/views/posts/_form_photo.html.haml
+++ b/app/views/posts/_form_photo.html.haml
@@ -1,4 +1,4 @@
-%li{ :id => (form_photo.nil? ? "" : "photo_#{form_photo.id}"), :name => 'photo_item' }
+%div{ :id => (form_photo.nil? ? "" : "photo_#{form_photo.id}"), :name => 'photo_item' }
   = hidden_field_tag "photos[][image]", (form_photo.nil? ? "" : form_photo.image.id), :class => "image_id"
   = hidden_field_tag "photos[][id]", (form_photo.nil? ? "" : form_photo.id)
 
