--- a/app/views/posts/_form_pics.html.haml
+++ b/app/views/posts/_form_pics.html.haml
@@ -7,21 +7,22 @@
     %input{ :type => 'text', :id => 'url_uploader_url', :alt => 'http://' }
     %input{ :type => 'button', :id => 'url_uploader_btn', :value => '提交链接' }
   %input{ :id => 'photo_template', :value => render_form_photo(nil), :type => 'hidden' }
-  %ul{ :id => 'photos_list' }
+  %div{ :id => 'photos_list' }
     - post.photos.each do |p|
       = render_form_photo p
-  %div
+  %div{ :type => 'option_text' }
     %span
-      %a{ :id => 'tar_tog_url', :href => '#' }
+      %a{ :id => 'tar_tog_url', :class => 'image_url_starter slight', :href => '#' }
         提交一个图片网址
-      %a{ :id => 'tar_tog_local', :href => '#', :style => 'display:none' }
+      %a{ :id => 'tar_tog_local', :class => 'image_local_starter slight', :href => '#', :style => 'display:none' }
         提交本地图片
     %span
-      %a{ :id => 'tar_url', :href => '#' }
+      %a{ :id => 'tar_tog_textarea', :class => 'textarea_starter slight', :href => '#' }
         +添加描述
+      %a{ :id => 'tar_tog_textarea_close', :class => 'textarea_closer slight', :href => '#', :style => 'display:none' }
+        +关闭描述
     
-  %span{ :style => 'display:none' }
-    = label_tag 'content'
+  %div{ :class => 'text', :style => 'display:none' }
     = text_area_tag 'content', post.content
   
   :javascript
