--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -38,10 +38,108 @@
   .new_title_starter
     float: left
 
+  .image_url_starter
+    width: 200px
+    display: block
+    float: left
+
+  .file_image
+    clear: both
+    width: 685px
+    padding: 15px 0 5px 20px
+    font-size: 20px
+    height: 35px
+    line-height: 35px
+    -moz-border-radius: 8px
+    -webkit-border-radius: 8px
+    border-radius: 8px
+    border: 1px solid #cadbea
+    background: #fff
+    margin-bottom: 30px
+
+  .url_image
+
+    .span
+      display:  inline-block
+      width: 130px
+      background: url('/images/post_image_url.gif') no-repeat
+      cursor: pointer
+      line-height: 30px
+      margin-top: 9px
+      vertical-align: top
+
+    .input
+      border: 0
+      height: 40px
+      line-height: 40px
+      font-size: 20px
+      width: 540px
+
+  .file_image
+
+    span
+      font-size: 12px
+
+    input
+      width: 270px
+      margin-right: 150px
+
+  .list_image
+    clear: both
+    width: 685px
+    padding: 5px 0 5px 20px
+    font-size: 20px
+    height: 75px
+    line-height: 75px
+    -moz-border-radius: 8px
+    -webkit-border-radius: 8px
+    border-radius: 8px
+    border: 1px solid $pink
+    background: #fff
+    margin-bottom: 30px	
+    
+    div
+      float: left
+
+    .the_drag_handle
+      width: 14px
+      height: 14px
+      margin-top: 30px
+      margin-right: 20px
+      background: url('/images/icons.gif') -84px -14px
+      overflow: hidden
+      cursor: move
+
+    .the_image
+      margin-top: 6px
+      width: 60px
+      height: 60px
+      border: 1px solid gray
+
+    .the_text
+      width: 520px
+      padding: 0px 20px
+      margin-top: 20px	
+
+      input
+        width: 480px
+        height: 32px
+        border: 1px solid gray
+        font-size: 20px
+        line-height: 32px
+
+    .the_close
+      width: 14px
+      height: 14px
+      margin-top: 10px
+      background: url('/images/icons.gif') -70px -14px
+      overflow: hidden
+
   .text,
   .title_text,
   .url_link,
-  .title_link
+  .title_link,
+  .url_image
     clear: both
     width: 685px
     padding: 5px 0 5px 20px
