--- a/app/views/layouts/posts.html.haml
+++ b/app/views/layouts/posts.html.haml
@@ -11,7 +11,7 @@
 
 - content_for :head, do
   = stylesheet_link_tag "post_edit", "mooeditable"
-  - js 'mooeditable', 'mooeditable.local'
+  - js 'mooeditable.local', 'mooeditable'
   :javascript
     document.addEvent('domready', function(){
       K.post.init()
